--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -1,25 +1,89 @@
-<div class="container">
-	<h1> Welcome </h1>
+<div class="container text-center">
+	<h1 class="welcome"> Welcome </h1>
 	<p class="lead"> Please create an account or log in to enjoy our news feeds. </p>
-	<form name="postsForm" ng-submit="submit(currentArticle.id)">	
-		<div class="row">
-			<div class="col-md-4">
-				<div class="form-group">
-					<label class="control-label sr-only" for="Email"> Email </label>
-					<div class="input-group">
-						<span class="input-group-addon glyphicon glyphicon-envelope"></span>
-						<input type="email" class="form-control" ng-model="email" name="email" id="Email" placeholder="Email...">
-					</div>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<label class="control-label sr-only" for="Prénom"> Prénom </label>
-				<input type="text" class="form-control" ng-model="firstname" name="firstname" id="Prénom" placeholder="Prénom...">
-			</div>
-		</div>
-		<div class="row">
-			<textarea class="form-control" ng-model="message" name="message" rows="3" cols="10" maxlength="200" placeholder="Commentaire..."></textarea>
-		</div><!-- class row -->
-		<button type="submit" id="submit" class="btn btn-default"> Submit </button>
-	</form>
-</div><!-- class container -->
+	
+	<div class="container jumbotron formContainer">
+		<h2 class="lead"> Registration </h2>
+		<form name="signUpForm">	
+			
+			<!-- First & Last Names -->
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Firstname"> Firstname </label>
+						<div class="input-group">
+							<span class="input-group-addon glyphicon glyphicon-envelope"></span>
+							<input type="text" class="form-control" ng-model="firstname" name="firstname" id="firstname" placeholder="Firstname...">
+						</div><!-- class input-group -->
+					</div><!-- class form-group -->
+				</div><!-- class col-md-6 -->
+
+				<div class="col-md-6">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Lastname"> Lastname </label>
+						<div class="input-group">
+							<span class="input-group-addon glyphicon glyphicon-envelope"></span>
+							<input type="text" class="form-control" ng-model="lastname" name="lastname" id="lastname" placeholder="Lastname...">
+						</div><!-- class input-group -->
+					</div><!-- class form-group -->
+				</div><!-- class col-md-6 -->
+			</div><!-- class row -->
+
+			<!-- Email & Login -->
+			<div class="row">
+				<div class="col-md-6">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Email"> Email </label>
+						<div class="input-group">
+							<span class="input-group-addon glyphicon glyphicon-envelope"></span>
+							<input type="email" class="form-control" ng-model="email" name="email" id="email" placeholder="Email...">
+						</div><!-- class input-group -->
+					</div><!-- class form-group -->
+				</div><!-- class col-md-6 -->
+
+				<div class="col-md-6">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Login"> Login </label>
+						<div class="input-group">
+							<span class="input-group-addon glyphicon glyphicon-user"></span>
+							<input type="text" class="form-control" ng-model="login" name="login" id="login" placeholder="Login...">
+						</div><!-- class input-group -->
+					</div><!-- class col-md-6 -->
+				</div><!-- class col-md-6 -->
+			</div><!-- class row -->
+
+
+			<!-- Password & Confirmation -->
+			<div class="row">
+				<div clas="form-group">
+					<div class="col-md-6">
+						<div class="form-group">
+							<label class="control-label sr-only" for="Password"> Password </label>
+							<div class="input-group">
+								<span class="input-group-addon glyphicon glyphicon-lock"></span>
+								<input type="password" class="form-control" ng-model="password" name="password" id="password" placeholder="Password...">
+							</div><!-- class input-group -->
+						</div><!-- class form-group -->
+					</div><!-- class col-md-6 -->
+
+					<div class="col-md-6">
+						<div class="form-group">
+							<label class="control-label sr-only" for="Confirm"> Confirm </label>
+							<div class="input-group">
+								<span class="input-group-addon glyphicon glyphicon-repeat"></span>
+								<input type="password" class="form-control" ng-model="confirm" name="confirm" id="confirm" placeholder="Confirm...">
+							</div><!-- class input-group -->
+						</div><!-- class col-md-6 -->
+					</div><!-- class col-md-6 -->
+				</div><!-- class form-group -->
+			</div><!-- class row -->
+
+			<!-- Submit -->
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					 <a class="btn btn-primary" href="" role="submit"> Sign Up </a>
+				</div><!-- class col-md-6 -->
+			</div><!-- class row -->
+
+		</form><!-- named signUpForm -->
+	</div><!-- class container jumbotron -->
