--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -3,7 +3,7 @@
 	<p class="lead"> Please create an account or log in to enjoy our news feeds. </p>
 	
 	<div class="container jumbotron formContainer">
-		<h2 class="lead"> Registration </h2>
+		<h1 class="lead"><small> Registration </small></h1>
 		<form name="signUpForm">	
 			
 			<!-- First & Last Names -->
@@ -12,7 +12,7 @@
 					<div class="form-group">
 						<label class="control-label sr-only" for="Firstname"> Firstname </label>
 						<div class="input-group">
-							<span class="input-group-addon glyphicon glyphicon-envelope"></span>
+							<span class="input-group-addon glyphicon glyphicon-hand-right"></span>
 							<input type="text" class="form-control" ng-model="firstname" name="firstname" id="firstname" placeholder="Firstname...">
 						</div><!-- class input-group -->
 					</div><!-- class form-group -->
@@ -22,7 +22,7 @@
 					<div class="form-group">
 						<label class="control-label sr-only" for="Lastname"> Lastname </label>
 						<div class="input-group">
-							<span class="input-group-addon glyphicon glyphicon-envelope"></span>
+							<span class="input-group-addon glyphicon glyphicon-hand-right"></span>
 							<input type="text" class="form-control" ng-model="lastname" name="lastname" id="lastname" placeholder="Lastname...">
 						</div><!-- class input-group -->
 					</div><!-- class form-group -->
@@ -81,7 +81,7 @@
 			<!-- Submit -->
 			<div class="row">
 				<div class="col-md-4 col-md-offset-4">
-					 <a class="btn btn-primary" href="" role="submit"> Sign Up </a>
+					<a class="btn btn-primary" href="#/client" role="submit"> Sign Up </a>
 				</div><!-- class col-md-6 -->
 			</div><!-- class row -->
 
