--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -30,7 +30,7 @@
 			<h1><span class="glyphicon glyphicon-book"></span> Latest News</h1>
 			
 			<!-- All News -->
-			<div class="newsContent" ng-hide="showArticle" ng-animate="{show: 'example-show', hide: 'example-hide'}">
+			<div class="newsContent" ng-hide="showArticle">
 				<div id="{{article.id}}" class="media well" ng-repeat="article in articles">
 					<div class="pull-left media-middle">
 						<a>
@@ -47,9 +47,9 @@
 			</div><!-- class newsContent -->
 
 			<!-- One News -->
-			<div  class="newsContent" ng-show="showArticle" ng-animate="{show: 'example-show', hide: 'example-hide'}">
+			<div  class="newsContent" ng-show="showArticle">
 				<div class="container-fluid jumbotron">
-					<a class="btn-lg pull-right" ng-click="doClose()" role="button"><span class="glyphicon glyphicon-remove"></span></a>
+					<a class="btn-lg pull-right" ng-click="doClick()" role="button"><span class="glyphicon glyphicon-remove"></span></a>
 					<img class="center-block img-circle" ng-src="{{currentArticle.images[0].url}}" alt="{{currentArticle.images[0].alt}}" width="150" height="150">
 					<h2 class="lead">{{currentArticle.title}}<em>—{{currentArticle.publish_date}}</em></h2>
 					<p class="text-justify">{{currentArticle.content}}</p>
