--- a/app/partials/registration.html
+++ b/app/partials/registration.html
@@ -12,7 +12,7 @@
 					<div class="form-group">
 						<label class="control-label sr-only" for="Firstname"> Firstname </label>
 						<div class="input-group">
-							<span class="input-group-addon glyphicon glyphicon-hand-right"></span>
+							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
 							<input type="text" class="form-control" ng-model="firstname" name="firstname" id="firstname" placeholder="Firstname...">
 						</div><!-- class input-group -->
 					</div><!-- class form-group -->
@@ -22,7 +22,7 @@
 					<div class="form-group">
 						<label class="control-label sr-only" for="Lastname"> Lastname </label>
 						<div class="input-group">
-							<span class="input-group-addon glyphicon glyphicon-hand-right"></span>
+							<span class="input-group-addon"><span class="glyphicon glyphicon-hand-right"></span></span>
 							<input type="text" class="form-control" ng-model="lastname" name="lastname" id="lastname" placeholder="Lastname...">
 						</div><!-- class input-group -->
 					</div><!-- class form-group -->
@@ -35,7 +35,7 @@
 					<div class="form-group">
 						<label class="control-label sr-only" for="Email"> Email </label>
 						<div class="input-group">
-							<span class="input-group-addon glyphicon glyphicon-envelope"></span>
+							<span class="input-group-addon"><span class="glyphicon glyphicon-envelope"></span></span>
 							<input type="email" class="form-control" ng-model="email" name="email" id="email" placeholder="Email...">
 						</div><!-- class input-group -->
 					</div><!-- class form-group -->
@@ -45,7 +45,7 @@
 					<div class="form-group">
 						<label class="control-label sr-only" for="Login"> Login </label>
 						<div class="input-group">
-							<span class="input-group-addon glyphicon glyphicon-user"></span>
+							<span class="input-group-addon"><span class="glyphicon glyphicon-user"></span></span>
 							<input type="text" class="form-control" ng-model="login" name="login" id="login" placeholder="Login...">
 						</div><!-- class input-group -->
 					</div><!-- class col-md-6 -->
@@ -60,7 +60,7 @@
 						<div class="form-group">
 							<label class="control-label sr-only" for="Password"> Password </label>
 							<div class="input-group">
-								<span class="input-group-addon glyphicon glyphicon-lock"></span>
+								<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
 								<input type="password" class="form-control" ng-model="password" name="password" id="password" placeholder="Password...">
 							</div><!-- class input-group -->
 						</div><!-- class form-group -->
@@ -70,7 +70,7 @@
 						<div class="form-group">
 							<label class="control-label sr-only" for="Confirm"> Confirm </label>
 							<div class="input-group">
-								<span class="input-group-addon glyphicon glyphicon-repeat"></span>
+								<span class="input-group-addon"><span class="glyphicon glyphicon-repeat"></span></span>
 								<input type="password" class="form-control" ng-model="confirm" name="confirm" id="confirm" placeholder="Confirm...">
 							</div><!-- class input-group -->
 						</div><!-- class col-md-6 -->
