--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -1,22 +1,17 @@
-<div class="container text-center">
+<div class="container text-center" ng-controller="ProfilCtrl">
 	<h1 class="welcome"> Edit your profil ! </h1>
 	
 	<div class="container jumbotron formContainer">
-		<form name="addNewsForm">	
+		<form name="updateProfil">	
 			
 			<!-- First & Last Names -->
 			<div class="row">
 				<div class="col-md-6">
 					
 					<h3 class="lead"> Login </h3>
-
-					<div class="col-md-12 jumbotron dnd" id="drop_zone">
-						<h4 class="lead">  Drag & Drop </h4>
-						<h5>  (or Click) </h5>
-						<h2><span class="glyphicon glyphicon-cloud-download" aria-hidden="true"></span></h2>
+					<div class="col-md-12 jumbotron editPict">
+						<img class="center-block dnd img-circle" id="drop_zone">
 					</div><!-- class col-md-12 -->
-
-					<output id="list"></output>
 
 				</div><!-- class col-md-6 -->
 				
@@ -67,32 +62,43 @@
 		</form><!-- named signUpForm -->
 	</div><!-- class container jumbotron -->
 
-	<script>
-  function handleFileSelect(evt) {
-    evt.stopPropagation();
-    evt.preventDefault();
+	<!--<script>
+	function handleFileSelect(evt) {
+		evt.stopPropagation();
+		evt.preventDefault();
 
-    var files = evt.dataTransfer.files; // FileList object.
+    	var files = evt.dataTransfer.files; // FileList object.
 
-    // files is a FileList of File objects. List some properties.
-    var output = [];
-    for (var i = 0, f; f = files[i]; i++) {
-      output.push('<li><strong>', escape(f.name), '</strong> (', f.type || 'n/a', ') - ',
-                  f.size, ' bytes, last modified: ',
-                  f.lastModifiedDate ? f.lastModifiedDate.toLocaleDateString() : 'n/a',
-                  '</li>');
+    	// files is a FileList of File objects. List some properties.
+    	var output = [];
+    	for (var i = 0, f; f = files[i]; i++) {
+    		// Only process image files.
+    		if (!f.type.match('image/*')) {
+    			continue;
+    		}
+
+    		var reader = new FileReader();
+    		reader.onload = (function(theFile) {
+    			return function(e) {
+	          		// Render thumbnail.
+	          		var imgBlock = document.getElementById('drop_zone');
+	          		imgBlock.setAttribute('src', e.target.result);
+	          		imgBlock.setAttribute('alt', escape(theFile.name));
+	          	};
+	          })(f);
+	    	// Read in the image file as a data URL.
+	    	reader.readAsDataURL(f);
+	    }
+	}
+
+	function handleDragOver(evt) {
+		evt.stopPropagation();
+		evt.preventDefault();
+    	evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
     }
-    document.getElementById('list').innerHTML = '<ul>' + output.join('') + '</ul>';
-  }
 
-  function handleDragOver(evt) {
-    evt.stopPropagation();
-    evt.preventDefault();
-    evt.dataTransfer.dropEffect = 'copy'; // Explicitly show this is a copy.
-  }
-
-  // Setup the dnd listeners.
-  var dropZone = document.getElementById('drop_zone');
-  dropZone.addEventListener('dragover', handleDragOver, false);
-  dropZone.addEventListener('drop', handleFileSelect, false);
-</script>
+  	// Setup the dnd listeners.
+  	var dropZone = document.getElementById('drop_zone');
+  	dropZone.addEventListener('dragover', handleDragOver, false);
+  	dropZone.addEventListener('drop', handleFileSelect, false);
+  	</script>-->
