Correction de l'erreur de Christian

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -45,7 +45,7 @@
 }
 
 .jumbotron.editPict {
-  background-image: url('/News/app/img/plus.jpg');
+  background-image: url('/project/app/img/plus.jpg');
   padding: 0px;
   margin-left: 4em;
   border-radius: 50%;
