--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -9,7 +9,7 @@
 				<div class="col-md-6">
 					<h3 class="lead"> Login </h3>
 
-					<div class="well">
+					<div class="well dropfile">
 					</div>
 
 				</div><!-- class col-md-6 -->
