--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -8,55 +8,60 @@
 			<div class="row">
 				<div class="col-md-6">
 					<h3 class="lead"> Login </h3>
+					<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true"
+					accept="image/*,application/pdf">
+					<span> Drop your picture ! </span>
+				</div>
+			</div><!-- class col-md-6 -->
 
-					<div class="well dropfile">
-					</div>
+			<div class="col-md-6 text-center">
+				<h2 class="lead"> Change your password : </h2>
 
-				</div><!-- class col-md-6 -->
-				
-				<div class="col-md-6 text-center">
-					<h2 class="lead"> Change your password : </h2>
+				<div class="col-md-12">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Current"> Current </label>
+						<div class="input-group">
+							<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+							<input type="password" class="form-control" ng-model="current" name="current" id="current" placeholder="Current...">
+						</div><!-- class input-group -->
+					</div><!-- class form-group -->
+				</div><!-- class col-md-12 -->
 
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label sr-only" for="Current"> Current </label>
-							<div class="input-group">
-								<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-								<input type="password" class="form-control" ng-model="current" name="current" id="current" placeholder="Current...">
-							</div><!-- class input-group -->
-						</div><!-- class form-group -->
-					</div><!-- class col-md-12 -->
-					
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label sr-only" for="Author"> New </label>
-							<div class="input-group">
-								<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
-								<input type="password" class="form-control" ng-model="new" name="new" id="new" placeholder="New...">
-							</div><!-- class input-group -->
-						</div><!-- class form-group -->
-					</div><!-- class col-md-12 -->
+				<div class="col-md-12">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Author"> New </label>
+						<div class="input-group">
+							<span class="input-group-addon"><span class="glyphicon glyphicon-lock"></span></span>
+							<input type="password" class="form-control" ng-model="new" name="new" id="new" placeholder="New...">
+						</div><!-- class input-group -->
+					</div><!-- class form-group -->
+				</div><!-- class col-md-12 -->
 
-					<div class="col-md-12">
-						<div class="form-group">
-							<label class="control-label sr-only" for="Author"> Confirm </label>
-							<div class="input-group">
-								<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>
-								<input type="password" class="form-control" ng-model="new" name="new" id="new" placeholder="New...">
-							</div><!-- class input-group -->
-						</div><!-- class form-group -->
-					</div><!-- class col-md-12 -->
+				<div class="col-md-12">
+					<div class="form-group">
+						<label class="control-label sr-only" for="Author"> Confirm </label>
+						<div class="input-group">
+							<span class="input-group-addon"><span class="glyphicon glyphicon-ok"></span></span>
+							<input type="password" class="form-control" ng-model="new" name="new" id="new" placeholder="New...">
+						</div><!-- class input-group -->
+					</div><!-- class form-group -->
+				</div><!-- class col-md-12 -->
 
-				</div><!-- class col-md-6 -->
+			</div><!-- class col-md-6 -->
 
-			</div><!-- class row -->
+		</div><!-- class row -->
 
-			<!-- Submit -->
-			<div class="row">
-				<div class="col-md-4 col-md-offset-4">
-					<a draggable="true" class="btn btn-primary btn-md" role="submit"> Post </a>
-				</div><!-- class col-md-6 -->
-			</div><!-- class row -->
+		<!-- Submit -->
+		<div class="row">
+			<div class="col-md-4 col-md-offset-4">
+				<a draggable="true" class="btn btn-primary btn-md" role="submit"> Post </a>
+			</div><!-- class col-md-6 -->
+		</div><!-- class row -->
 
-		</form><!-- named signUpForm -->
-	</div><!-- class container jumbotron -->
+	</form><!-- named signUpForm -->
+</div><!-- class container jumbotron -->
+<script type="text/javascript">
+jQuery(function($) {
+	jQuery.event.props.push('dataTransfer');
+});
+</script>
