--- a/app/css/app.css
+++ b/app/css/app.css
@@ -41,17 +41,21 @@
   font-size: 100%;
 }
 
+.dropText {
+  font-size: 100%;
+}
+
 .drop-box {
   background: #F8F8F8;
   border: 0.1em dashed grey;
   border-radius: 50%;
-  width: 170px;
-  height: 170px;
+  width: 124px;
+  height: 124px;
   text-align: center;
-  padding-top: 25px;
-  margin: 10px;
+  padding-top: 2em;
 }
 
 .dragover {
-    border: 5px dashed blue;
+    border: 0.1em dashed black;
+    opacity: 0.4;
 }
