--- a/app/css/app.css
+++ b/app/css/app.css
@@ -41,8 +41,13 @@
   font-size: 100%;
 }
 
-.dropText {
+.jumbotron p.dropText {
   font-size: 100%;
+  padding-top: 2.6em;
+}
+
+.dropText {
+  font-size: 20%;
   border: 0.1em dashed grey;
   border-radius: 50%;
   width: 124px;
@@ -53,13 +58,6 @@
 .dropImg {
   border: 0.1em dashed grey;
   border-radius: 50%;
-}
-
-.drop-box {
-  background: #F8F8F8;
-  border: 2px solid grey;
-  border-radius: 5%;
-  text-align: center;
 }
 
 .dragover {
