--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -10,7 +10,7 @@
 					<div class="col-md-6">
 						<h3 class="lead"> Login </h3>
 						<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
-							<h3 ng-hide="imgIsEnable" class="lead dropText"><span> Drop your picture ! (or click)</span><span class="glyphicon glyphicon-cloud-download"></span></h3>
+							<p ng-hide="imgIsEnable" class="lead dropText"> Drop your picture ! (or click)<span class="glyphicon glyphicon-cloud-download"></span></p>
 							<img class="img-responsive dropImg" ng-show="imgIsEnable" ng-src="{{getPicture()}}"/>
 						</div>
 					</div>
