--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -11,10 +11,10 @@
 						<h3 class="lead"> Login </h3>
 						<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
 							<p ng-hide="imgIsEnable" class="lead dropText"> Drop your picture ! (or click)<span class="glyphicon glyphicon-cloud-download"></span></p>
-							<img class="img-responsive dropImg" ng-show="imgIsEnable" ng-src="{{getPicture()}}"/>
+							<img class="img-responsive dropImg" ng-show="imgIsEnable" ng-src=""/>
 						</div>
 					</div>
-					<div class="col-md-6">
+					<div class="col-md-6 infoUser">
 						<p class="text-left">{{currentUser.firstname}}</p>
 						<p class="text-left">{{currentUser.lastname}}</p>
 						<p class="text-left">{{currentUser.email}}</p>
@@ -59,8 +59,8 @@
 
 		<!-- Submit -->
 		<div class="row">
-			<div class="col-md-4 col-md-offset-4">
-				<a draggable="true" class="btn btn-primary btn-md" role="submit"> Post </a>
+			<div class="col-md-4 col-md-offset-7">
+				<a draggable="true" class="btn btn-success btn-md" role="submit"> Change </a>
 			</div><!-- class col-md-6 -->
 		</div><!-- class row -->
 
