Drag & Drop Final

--- a/app/partials/userProfil.html
+++ b/app/partials/userProfil.html
@@ -11,7 +11,7 @@
 						<h3 class="lead"> Login </h3>
 						<div ng-file-drop class="drop-box" ng-file-select ng-model="files" drag-over-class="dragover" allow-dir="true" accept="image/*,application/pdf">
 							<p ng-hide="imgIsEnable" class="lead dropText"> Drop your picture ! (or click)<span class="glyphicon glyphicon-cloud-download"></span></p>
-							<img class="img-responsive dropImg" ng-show="imgIsEnable" ng-src="{{imgSrc}}"/>
+							<img class="dropImg" ng-show="imgIsEnable" ng-src="{{imgSrc}}"/>
 						</div>
 					</div>
 					<div class="col-md-6 infoUser">
