--- a/app/partials/client-news-feed.html
+++ b/app/partials/client-news-feed.html
@@ -39,7 +39,7 @@
 					</div>
 					<div class="media-body">
 						<button ng-show="currentUser.role === 'admin'" class="btn btn-danger pull-right" ng-click="delete(article.id)"> Delete </button>
-						<h4 class="text-left lead media-heading">{{article.title}}<em>—{{article.timestamp}}</em></h4>
+						<h4 class="text-left lead media-heading">{{article.title}}<small><em>—{{article.timestamp}}</em></small></h4>
 						<h5 class="text-left"><small><em>by {{article.username}}</em></small></h5>
 						<p class="text-justify preview">{{article.content}}</p>
 						<a data-toggle="modal" data-target="#myModal" ng-click="readMore(article.id)"  class="btn btn-primary">Read More </a>
