Fix Bugs Client News Feed

--- a/app/partials/admin.html
+++ b/app/partials/admin.html
@@ -31,10 +31,10 @@
 							<div class="input-group">
 								<span class="input-group-addon"><span class="glyphicon glyphicon-th-list"></span></span>
 								<select class="form-control" ng-model="inputs.categories" name="categories" id="categories">
-									<option>Politics</option>
-									<option>Finance</option>
-									<option>Sports</option>
-									<option>International</option>
+									<option value="1">Politics</option>
+									<option value="2">Finance</option>
+									<option value="3">Sports</option>
+									<option value="4">International</option>
 								</select>
 							</div><!-- class input-group -->
 						</div><!-- class form-group -->
@@ -52,7 +52,7 @@
 				<div class="col-md-6">
 					<div class="form-group">
 						<label class="control-label sr-only" for="Content"> Content </label>
-						<textarea class="form-control" id="contentArticleArea" ng-model="inputs.content" name="content" rows="17" cols="10" maxlength="200" placeholder="Content..."></textarea>
+						<textarea class="form-control" id="contentArticleArea" ng-model="inputs.content" name="content" rows="17" cols="10" placeholder="Content..."></textarea>
 					</div><!-- class form-group -->
 				</div><!-- class col-md-6 -->
 
